components/elk/deployment/overlays/baremetal/elastic-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-statefulset
spec:
  volumeClaimTemplates:
    - metadata:
        name: datadir
        labels:
          app: elasticsearch
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: elastic-storage
        resources:
          requests:
            storage: '1Gi'
